<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#EEE">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="5dip"
        android:indeterminate="true"
        />

    <TextView
        android:id="@+id/rs_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:textStyle="bold"
        android:layout_margin="0dip"
        android:background="@drawable/border"
        />

    <TextView
        android:id="@+id/rs_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:background="#FFF"
        android:layout_margin="0dip"
        />

    <TextView
        android:id="@+id/rs_championship"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:background="#FFF"
        android:layout_margin="0dip"
        />

    <TextView
        android:id="@+id/rs_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:background="#FFF"
        android:layout_margin="0dip"
        />

    <TextView
        android:id="@+id/rs_subevent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:background="#FFF"
        android:layout_margin="0dip"
        />

    <TextView
        android:id="@+id/rs_subevent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:background="#FFF"
        android:layout_margin="0dip"
        />

    <TextView
        android:id="@+id/rs_label_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:textStyle="bold"
        android:layout_margin="0dip"
        android:background="@drawable/border"
        android:text="@string/date"
        />

    <TextView
        android:id="@+id/rs_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:background="#FFF"
        android:layout_margin="0dip"
        />

    <TextView
        android:id="@+id/rs_label_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:textStyle="bold"
        android:layout_margin="0dip"
        android:background="@drawable/border"
        android:text="@string/place"
        />

    <TextView
        android:id="@+id/rs_place1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:background="#FFF"
        android:layout_margin="0dip"
        />

    <TextView
        android:id="@+id/rs_place2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:background="#FFF"
        android:layout_margin="0dip"
        />

    <TextView
        android:id="@+id/rs_label_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dip"
        android:textStyle="bold"
        android:layout_margin="0dip"
        android:background="@drawable/border"
        android:text="@string/result"
        />

    <ListView
        android:id="@+id/rank_list"
        android:layout_below="@+id/search"
        android:layout_above="@+id/path"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:choiceMode="singleChoice"
        android:layout_margin="0sp"
        android:divider="#888"
        android:dividerHeight="1.0sp"
        android:listSelector="#00000000"
        />

</LinearLayout>